--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -51,8 +51,8 @@ defaultFeaturedImage = "knabe_car.jpg" # used as default for featured images in 
   showLikes = false
   showDateUpdated = false
   showAuthor = true
-  # showHero = true
-  # heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
+  showHero = true
+  heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
   layoutBackgroundBlur = true # only used when heroStyle equals background or thumbAndBackground
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
   showBreadcrumbs = false
@@ -68,13 +68,12 @@ defaultFeaturedImage = "knabe_car.jpg" # used as default for featured images in 
   showTableOfContents = true
   # showRelatedContent = false
   # relatedContentLimit = 3
-  showTaxonomies = false
+  showTaxonomies = true
   showAuthorsBadges = false
   showWordCount = true
   showSummary = true
   sharingLinks = false
-  # sharingLinks = [ "twitter", "email", "telegram"]
-
+ 
 [list]
   showHero = true
   heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
@@ -96,17 +95,17 @@ defaultFeaturedImage = "knabe_car.jpg" # used as default for featured images in 
 
 [taxonomy]
   showTermCount = true
-  showHero = false
-  # heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
+  showHero = true
+  heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
   showBreadcrumbs = false
   showViews = false
   showLikes = false
   showTableOfContents = false
-  cardView = false
+  cardView = true
 
 [term]
-  showHero = false
-  # heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
+  showHero = true
+  heroStyle = "background" # valid options: basic, big, background, thumbAndBackground
   showBreadcrumbs = false
   showViews = false
   showLikes = false
